Reordering of Changes

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -62,7 +62,7 @@
 %%   Right brace   \}     Tilde         \~}
 %
 % \newcommand\version{beta-3.3}
-% \newcommand\releasedate{2007/10/25}
+% \newcommand\releasedate{2007/11/14}
 % \newcommand\packagecopyright{Copyright \copyright{} 1998, 1999, 2000, 2001, 2002, 2004, 2005, 2006 Didier Verna}
 % \newcommand\fixme{\textsf{FiXme}}
 % \newcommand\auctex{AUC-\TeX}
@@ -366,11 +366,11 @@
 %
 % \section{Changes}
 % \begin{itemize}
-% \item[v3.3] Fix bug reported by Stefan Mann: a typo in the
-%   |\fixme@footnotetrue| macro name.\\
-%   Documentation improvements suggested by Brian van den Broek.\\
+% \item[v3.3] Documentation improvements suggested by Brian van den Broek.\\
 %   Fix incompatibility with \texttt{amsart} reported by Lars Madsen:
-%   \cs{@starttoc} takes two arguments.
+%   \cs{@starttoc} takes two arguments.\\
+%   Fix bug reported by Stefan Mann: a typo in the |\fixme@footnotetrue| macro
+%   name.
 % \item[v3.2] Added the marginclue layout option which only signals a fixme in
 %   the margin, withtout the actual contents.\\
 %   Support for Croatian thanks to Marcel Maretic |<marcel@fsb.hr>|.\\
@@ -414,7 +414,7 @@
 % \end{macro}
 %    \begin{macrocode}
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{fixme}[2007/10/25 vbeta-3.3
+\ProvidesPackage{fixme}[2007/11/14 vbeta-3.3
 			Insert fixme notes in your documents]
 
 \RequirePackage{ifthen}
