--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@
 
 
 *** Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2005, 2006 Didier Verna
+*** Copyright (C) 2007 Didier Verna
 
 This file is part of FiXme.
 
