--- a/fixme.dtx
+++ b/fixme.dtx
@@ -3,13 +3,12 @@
 % fixme.dtx --- Doc file for the FiXme package (code and documentation)
 %
 % Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2005, 2006 Didier Verna.
-%
-% PRCS: $Id: fixme.dtx 1.75 Tue, 12 Dec 2006 14:31:03 +0100 didier $
+% Copyright (C) 2007 Didier Verna.
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
 % Created:       Thu Dec 10 16:04:01 1998
-% Last Revision: Wed Dec 22 14:44:26 2004
+% Last Revision: Wed Nov 14 17:52:06 2007
 %
 % This file is part of FiXme.
 %
@@ -63,7 +62,7 @@
 %
 % \newcommand\version{beta-3.3}
 % \newcommand\releasedate{2007/11/14}
-% \newcommand\packagecopyright{Copyright \copyright{} 1998, 1999, 2000, 2001, 2002, 2004, 2005, 2006 Didier Verna}
+% \newcommand\packagecopyright{Copyright \copyright{} 1998, 1999, 2000, 2001, 2002, 2004, 2005, 2006, 2007 Didier Verna}
 % \newcommand\fixme{\textsf{FiXme}}
 % \newcommand\auctex{AUC-\TeX}
 % \MakeShortVerb{\|}
