--- a/fixme.dtx
+++ b/fixme.dtx
@@ -365,7 +365,9 @@
 %
 % \section{Changes}
 % \begin{itemize}
-% \item[v3.3] Support for KOMA-Script classes version 2006/07/30 v2.95b,
+% \item[v3.3] Honor \texttt{twoside} option in marginal layout, suggested by
+%   Jens Remus.\\
+%   Support for KOMA-Script classes version 2006/07/30 v2.95b,
 %   suggested by Jens Remus.\\
 %   Documentation improvements suggested by Brian van den Broek.\\
 %   Fix incompatibility with \texttt{amsart} reported by Lars Madsen:
