--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,9 @@
 
-
 			     WHAT'S NEW IN FIXME
 
 
-
-*** Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2005, 2006 Didier Verna
-*** Copyright (C) 2007 Didier Verna
+Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2005, 2006 Didier Verna
+Copyright (C) 2007 Didier Verna
 
 This file is part of FiXme.
 
@@ -18,6 +16,7 @@ and version 1.1 or later is part of all distributions of LaTeX
 version 1999/06/01 or later.
 
 FiXme consists of the files listed in the file `README'.
+
 
 * Version 3.3
 =============
