--- a/THANKS
+++ b/THANKS
@@ -1,3 +1,22 @@
+
+				 THANK YOU!
+
+
+Copyright (C) 2007 Didier Verna
+
+This file is part of FiXme.
+
+FiXme may be distributed and/or modified under the
+conditions of the LaTeX Project Public License, either version 1.1
+of this license or (at your option) any later version.
+The latest version of this license is in
+http://www.latex-project.org/lppl.txt
+and version 1.1 or later is part of all distributions of LaTeX
+version 1999/06/01 or later.
+
+FiXme consists of the files listed in the file `README'.
+
+
 * Contributors
 
 ** The following persons have contributed code, bug reports, localization,
