--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,8 @@ FiXme consists of the files listed in the file `README'.
 
 * Version 3.3
 =============
+** Document incompatibility between marginal layout and the ACM SIG classes
+reported by Jochen Wuttke
 ** Honor twoside option in marginal layout
 suggested by Jens Remus.
 ** Support KOMA-Script classes version 2006/07/30 v2.95b
