--- a/THANKS
+++ b/THANKS
@@ -22,10 +22,10 @@ FiXme consists of the files listed in the file `README'.
 ** The following persons have contributed code, bug reports, localization,
 ** suggestions etc:
 
-Jens Remus, Brian van den Broek, Lars Madsen, Stefan Mann, Marcel Maretic,
-Claude Lacoursière, Arnold Beckmann, Akim Demaille, Kim Rud Bille, Knut
-Lickert, Kasper B. Graversen, Augustín Martín, Ulf Jaenicke-Roessler, Riccardo
-Murri, Harald Harders.
+Jochen Wuttke, Jens Remus, Brian van den Broek, Lars Madsen, Stefan Mann,
+Marcel Maretic, Claude Lacoursière, Arnold Beckmann, Akim Demaille, Kim Rud
+Bille, Knut Lickert, Kasper B. Graversen, Augustín Martín, Ulf
+Jaenicke-Roessler, Riccardo Murri, Harald Harders.
 
 
 
