Make \fixme and friends robust

--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,11 @@ version 1999/06/01 or later.
 FiXme consists of the files listed in the file `README'.
 
 
+* Version 3.4
+=============
+** \fixme, \fxerror, \fxwarning and \fxnote are now robust
+thanks to Will Robertson.
+
 * Version 3.3
 =============
 ** Document incompatibility between marginal layout and the ACM SIG classes
