--- a/THANKS
+++ b/THANKS
@@ -2,7 +2,7 @@
 				 THANK YOU!
 
 
-Copyright (C) 2007 Didier Verna
+Copyright (C) 2007, 2009 Didier Verna
 
 This file is part of FiXme.
 
@@ -22,10 +22,10 @@ FiXme consists of the files listed in the file `README'.
 ** The following persons have contributed code, bug reports, localization,
 ** suggestions etc:
 
-Jochen Wuttke, Jens Remus, Brian van den Broek, Lars Madsen, Stefan Mann,
-Marcel Maretic, Claude Lacoursière, Arnold Beckmann, Akim Demaille, Kim Rud
-Bille, Knut Lickert, Kasper B. Graversen, Augustín Martín, Ulf
-Jaenicke-Roessler, Riccardo Murri, Harald Harders.
+Will Robertson, Jochen Wuttke, Jens Remus, Brian van den Broek, Lars Madsen,
+Stefan Mann, Marcel Maretic, Claude Lacoursière, Arnold Beckmann, Akim
+Demaille, Kim Rud Bille, Knut Lickert, Kasper B. Graversen, Augustín Martín,
+Ulf Jaenicke-Roessler, Riccardo Murri, Harald Harders.
 
 
 
