--- a/NEWS
+++ b/NEWS
@@ -26,7 +26,7 @@ thanks to Will Robertson.
 * Version 3.3
 =============
 ** Document incompatibility between marginal layout and the ACM SIG classes
-reported by Jochen Wuttke
+reported by Jochen Wuttke.
 ** Honor twoside option in marginal layout
 suggested by Jens Remus.
 ** Support KOMA-Script classes version 2006/07/30 v2.95b
