--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@
 
 
 Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2005, 2006 Didier Verna
-Copyright (C) 2007 Didier Verna
+Copyright (C) 2007, 2009 Didier Verna
 
 This file is part of FiXme.
 
@@ -22,6 +22,8 @@ FiXme consists of the files listed in the file `README'.
 =============
 ** \fixme, \fxerror, \fxwarning and \fxnote are now robust
 thanks to Will Robertson.
+** Fix incompatibility with KOMA-Script classes
+when the lox file is inexistent, reported by Philipp Stephani.
 
 * Version 3.3
 =============
