--- a/fixme.dtx
+++ b/fixme.dtx
@@ -3,12 +3,12 @@
 % fixme.dtx --- Doc file for the FiXme package (code and documentation)
 %
 % Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2005, 2006 Didier Verna.
-% Copyright (C) 2007 Didier Verna.
+% Copyright (C) 2007, 2009 Didier Verna.
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
 % Created:       Thu Dec 10 16:04:01 1998
-% Last Revision: Wed Nov 14 17:52:06 2007
+% Last Revision: Thu Jul 16 19:55:00 2009
 %
 % This file is part of FiXme.
 %
