Fix typo in dtx

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -688,7 +688,7 @@
 \newif\iffixme@index
 
 %    \end{macrocode}
-% Setters for these booleans (some might required special treatment):
+% Setters for these booleans (some might require special treatment):
 %    \begin{macrocode}
 \let\fixme@setinline\fixme@inlinetrue
 \def\fixme@setmargin{%
