Use the setters for all layout style options

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -730,11 +730,11 @@
 \DeclareOption{nomargin}{\fixme@marginfalse}
 \DeclareOption{marginclue}{\fixme@setmarginclue}
 \DeclareOption{nomarginclue}{\fixme@margincluefalse}
-\DeclareOption{footnote}{\fixme@footnotetrue}
+\DeclareOption{footnote}{\fixme@setfootnote}
 \DeclareOption{nofootnote}{\fixme@footnotefalse}
-\DeclareOption{user}{\fixme@usertrue}
+\DeclareOption{user}{\fixme@setuser}
 \DeclareOption{nouser}{\fixme@userfalse}
-\DeclareOption{index}{\fixme@indextrue}
+\DeclareOption{index}{\fixme@setindex}
 \DeclareOption{noindex}{\fixme@indexfalse}
 
 %    \end{macrocode}
