--- a/fixme.dtx
+++ b/fixme.dtx
@@ -435,11 +435,29 @@
 \ProvidesPackage{fixme}[2009/08/02 v4.0
 			Insert fixme notes in your documents]
 
+\newcommand*\fixmelogo{\textsf{FiXme}}
+
 \RequirePackage{ifthen}
 \RequirePackage{verbatim}
+
+%    \end{macrocode}
+% The |xkeyval| package and some convenience wrappers:
+%    \begin{macrocode}
 \RequirePackage{xkeyval}
 
-\newcommand*\fixmelogo{\textsf{FiXme}}
+\newcommand\FXDeclareLegacyOption[1]{%
+  \DeclareOptionX[fx]<legacy>{#1}{\PackageWarning{FiXme}{%
+      `#1' is a legacy option that has no effect anymore,}}}
+
+\newcommand\@fxvoidoptionerror[2]{%
+  \PackageError{FiXme}{misuse of option `#1'}{%
+    You have given the option `#1' the argument `#2' but it takes
+    none.\MessageBreak
+    Type X to quit, fix the option list passed to FiXme and re-run
+    LaTeX.\MessageBreak}}
+\newcommand\FXDeclareVoidOption[3]{%
+  \DeclareOptionX[fx]<#1>{#2}[]{%
+    \ifthenelse{\equal{##1}{}}{#3}{\@fxvoidoptionerror{#2}{##1}}}}
 
 %    \end{macrocode}
 % \subsection{List macros}
@@ -726,27 +744,23 @@
 %    \end{macrocode}
 % Options that control which layouts are selected:
 %    \begin{macrocode}
-\DeclareOptionX[fx]<layout>{inline}{\fixme@setinline}
-\DeclareOptionX[fx]<layout>{noinline}{\fixme@inlinefalse}
-\DeclareOptionX[fx]<layout>{margin}{\fixme@setmargin}
-\DeclareOptionX[fx]<layout>{nomargin}{\fixme@marginfalse}
-\DeclareOptionX[fx]<layout>{marginclue}{\fixme@setmarginclue}
-\DeclareOptionX[fx]<layout>{nomarginclue}{\fixme@margincluefalse}
-\DeclareOptionX[fx]<layout>{footnote}{\fixme@setfootnote}
-\DeclareOptionX[fx]<layout>{nofootnote}{\fixme@footnotefalse}
-\DeclareOptionX[fx]<layout>{user}{\fixme@setuser}
-\DeclareOptionX[fx]<layout>{nouser}{\fixme@userfalse}
-\DeclareOptionX[fx]<layout>{index}{\fixme@setindex}
-\DeclareOptionX[fx]<layout>{noindex}{\fixme@indexfalse}
+\FXDeclareVoidOption{layout}{inline}{\fixme@setinline}
+\FXDeclareVoidOption{layout}{noinline}{\fixme@inlinefalse}
+\FXDeclareVoidOption{layout}{margin}{\fixme@setmargin}
+\FXDeclareVoidOption{layout}{nomargin}{\fixme@marginfalse}
+\FXDeclareVoidOption{layout}{marginclue}{\fixme@setmarginclue}
+\FXDeclareVoidOption{layout}{nomarginclue}{\fixme@margincluefalse}
+\FXDeclareVoidOption{layout}{footnote}{\fixme@setfootnote}
+\FXDeclareVoidOption{layout}{nofootnote}{\fixme@footnotefalse}
+\FXDeclareVoidOption{layout}{user}{\fixme@setuser}
+\FXDeclareVoidOption{layout}{nouser}{\fixme@userfalse}
+\FXDeclareVoidOption{layout}{index}{\fixme@setindex}
+\FXDeclareVoidOption{layout}{noindex}{\fixme@indexfalse}
 
 %    \end{macrocode}
 % The following options are here for backward compatibility, but are not used
 % anymore:
 %    \begin{macrocode}
-\newcommand\FXDeclareLegacyOption[1]{%
-  \DeclareOptionX[fx]<legacy>{#1}{\PackageWarning{FiXme}{%
-      `#1' is a legacy option that has no effect anymore,}}}
-
 \FXDeclareLegacyOption{info}
 \FXDeclareLegacyOption{noinfo}
 \FXDeclareLegacyOption{warning}
@@ -790,8 +804,8 @@
 %    \end{macrocode}
 %% Options that control whether to be silent or not:
 %    \begin{macrocode}
-\DeclareOptionX[fx]<log>{silent}{\fixme@silenttrue}
-\DeclareOptionX[fx]<log>{nosilent}{\fixme@silentfalse}
+\FXDeclareVoidOption{log}{silent}{\fixme@silenttrue}
+\FXDeclareVoidOption{log}{nosilent}{\fixme@silentfalse}
 
 %    \end{macrocode}
 %
@@ -998,7 +1012,7 @@
 % \subsection{Language processing}
 % Options that control which language is selected:
 %    \begin{macrocode}
-\DeclareOptionX[fx]<lang>{english}{%
+\FXDeclareVoidOption{lang}{english}{%
   \renewcommand*\fixmenoteprefix{\fixmelogo\nobreakspace Note}
   \renewcommand*\fixmewarningprefix{\fixmelogo\nobreakspace Warning}
   \renewcommand*\fixmeerrorprefix{\fixmelogo\nobreakspace Error}
@@ -1009,7 +1023,7 @@
   \renewcommand*\fixmeerrorindexname{**c@Errors:!}
   \renewcommand*\fixmefatalindexname{}
   \renewcommand*{\listfixmename}{List of Corrections}}
-\DeclareOptionX[fx]<lang>{french}{%
+\FXDeclareVoidOption{lang}{french}{%
   \renewcommand*\fixmenoteprefix{\fixmelogo\nobreakspace Note}
   \renewcommand*\fixmewarningprefix{\fixmelogo\nobreakspace Attention}
   \renewcommand*\fixmeerrorprefix{\fixmelogo\nobreakspace Erreur}
@@ -1020,8 +1034,8 @@
   \renewcommand*\fixmeerrorindexname{**c@Erreurs:!}
   \renewcommand*\fixmefatalindexname{}
   \renewcommand*{\listfixmename}{Liste des Corrections}}
-\DeclareOptionX[fx]<lang>{francais}{\ExecuteOptionsX[fx]<lang>{french}}
-\DeclareOptionX[fx]<lang>{spanish}{%
+\FXDeclareVoidOption{lang}{francais}{\ExecuteOptionsX[fx]<lang>{french}}
+\FXDeclareVoidOption{lang}{spanish}{%
   \renewcommand*\fixmenoteprefix{\fixmelogo\nobreakspace Nota}
   \renewcommand*\fixmewarningprefix{\fixmelogo\nobreakspace Aviso}
   \renewcommand*\fixmeerrorprefix{\fixmelogo\nobreakspace Error}
@@ -1032,7 +1046,7 @@
   \renewcommand*\fixmeerrorindexname{**c@Errores:!}
   \renewcommand*\fixmefatalindexname{}
   \renewcommand*{\listfixmename}{Lista de Correcciones}}
-\DeclareOptionX[fx]<lang>{italian}{%
+\FXDeclareVoidOption{lang}{italian}{%
   \renewcommand*\fixmenoteprefix{\fixmelogo\nobreakspace Nota}
   \renewcommand*\fixmewarningprefix{\fixmelogo\nobreakspace Avviso}
   \renewcommand*\fixmeerrorprefix{\fixmelogo\nobreakspace Errore}
@@ -1043,7 +1057,7 @@
   \renewcommand*\fixmeerrorindexname{**c@Errori:!}
   \renewcommand*\fixmefatalindexname{}
   \renewcommand*{\listfixmename}{Corrigenda}}
-\DeclareOptionX[fx]<lang>{german}{%
+\FXDeclareVoidOption{lang}{german}{%
   \renewcommand*\fixmenoteprefix{\fixmelogo\nobreakspace Anm}
   \renewcommand*\fixmewarningprefix{\fixmelogo\nobreakspace Warnung}
   \renewcommand*\fixmeerrorprefix{\fixmelogo\nobreakspace Fehler}
@@ -1054,9 +1068,9 @@
   \renewcommand*\fixmeerrorindexname{**c@Fehler:!}
   \renewcommand*\fixmefatalindexname{}
   \renewcommand*{\listfixmename}{Verzeichnis der Korrekturen}}
-\DeclareOptionX[fx]<lang>{ngerman}{%
+\FXDeclareVoidOption{lang}{ngerman}{%
   \ExecuteOptionsX[fx]<lang>{german}}
-\DeclareOptionX[fx]<lang>{danish}{%
+\FXDeclareVoidOption{lang}{danish}{%
   \renewcommand*\fixmenoteprefix{\fixmelogo\nobreakspace Note}
   \renewcommand*\fixmewarningprefix{\fixmelogo\nobreakspace Advarsel}
   \renewcommand*\fixmeerrorprefix{\fixmelogo\nobreakspace Fejl}
@@ -1067,7 +1081,7 @@
   \renewcommand*\fixmeerrorindexname{**c@Fejl:!}
   \renewcommand*\fixmefatalindexname{}
   \renewcommand*{\listfixmename}{Rettelser}}
-\DeclareOptionX[fx]<lang>{croatian}{%
+\FXDeclareVoidOption{lang}{croatian}{%
   \renewcommand*\fixmenoteprefix{\fixmelogo\nobreakspace Poruka}
   \renewcommand*\fixmewarningprefix{\fixmelogo\nobreakspace Upozorenje}
   \renewcommand*\fixmeerrorprefix{\fixmelogo\nobreakspace Gre\v ska}
@@ -1091,7 +1105,7 @@
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
-\DeclareOptionX[fx]<ltx>{final}{
+\FXDeclareVoidOption{ltx}{final}{
   \let\fixme@note\fixme@note@final
   \let\fixme@warning\fixme@warning@final
   \let\fixme@error\fixme@error@final
@@ -1101,7 +1115,7 @@
   \let\listoffixmes\listoffixmes@final
 }
 
-\DeclareOptionX[fx]<ltx>{draft}{
+\FXDeclareVoidOption{ltx}{draft}{
   \@ifclassloaded{article}{
     \let\@listoffixmes@pretoc\@listoffixmes@pretoc@article
     \let\@listoffixmes@posttoc\@listoffixmes@posttoc@article}{
